# BetterIO

./: BetterIO.cabal
src/Data/BetterIO/: InStream.hs  OutStream.hs  PipedStream.hs
test/: Test.hs
